# tacto

./: .gitignore  README.md  pyproject.toml
examples/: demo_mujoco_digit.py
examples/xml/: tacto_common.xml  touch_playground_rot.xml
examples/xml/assets/tacto_conf/: digit.yaml
requirements/: examples.txt  requirements.txt
tacto/: config_digit.yml  renderer.py  sensor.py
