[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tacto"
dynamic = ["version"]
description = "RCS integration of Tacto, a simulator for vision-based tactile sensors."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Roberto Calandra", email = "rcalandra@fb.com" }
]
maintainers=[
    { name = "Abdallah Ayad", email = "abdallah.ayad@utn.de"},
    { name = "Seongjin Bien", email = "seongjin.bien@utn.de"}
]
keywords = ["science","digit","tactile","simulation","tactile sensors"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.11"
dependencies = [
    "numpy", # need precise numpy version
    "matplotlib>=3.1.3", 
    "opencv-python~=4.10.0.84",
    "omegaconf>=2.0.6",
    "pyrender>=0.1.43",
    "hydra-core~=1.3.0",
    "scipy",
    "pyopengl==3.1.9",
    "pyglet==1.5.28",
    "mujoco>=3.2.6",
]

[project.urls]
"Homepage" = "https://github.com/facebookresearch/tacto"
"Repository" = "https://github.com/ayadabdalla/tacto"
RCS = "https://github.com/utn-mi/robot-control-stack"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tacto = ["config_digit.yml", "config_omnitact.yml"]

[tool.setuptools.dynamic]
version = { attr = "tacto.__version__" }
